# ncatbot-assistant

./: .env.example  .gitattributes  .gitignore  LICENSE  config.example.yaml  main.py  pyproject.toml  readme.md  requirements.txt
docs/superpowers/plans/: 2026-06-23-drive-bot-async-task-queue.md  2026-06-23-drive-bot-short-term-llm-context.md  2026-06-24-drive-bot-user-memory.md  2026-07-10-currents-daily-news.md
docs/superpowers/specs/: 2026-06-23-drive-bot-async-task-queue-design.md  2026-06-23-drive-bot-short-term-llm-context-design.md  2026-06-24-drive-bot-user-memory-design.md  2026-07-10-currents-daily-news-design.md
plugins/drive_bot/: README.md  manifest.toml  plugin.py
resources/skills/: neko_prompt_r18.md  trending_paper_prompt.md
resources/skills/neko-on-everything/references/: persona.md
skills/neko-on-everything/: SKILL.md
skills/neko-on-everything/references/avatars/: math.md
src/ncatbot_assistant/: __init__.py  app.py
src/ncatbot_assistant/drive_bot/: __init__.py  commands.py  config.py  constants.py  estimator.py  intents.py  llm_context.py  ncatbot_plugin.py  reply.py  router.py  storage.py  usage.py  user_memory.py
tests/: bootstrap.py  test_drive_bot_config.py  test_drive_bot_daily_service.py  test_drive_bot_handlers.py  test_drive_bot_jm_service.py  test_drive_bot_llm_context.py  test_drive_bot_queue.py  test_drive_bot_router.py  test_drive_bot_runtime_dirs.py  test_drive_bot_storage.py  test_drive_bot_user_memory.py
utils/: constants.py  daily.py  jmcomic_crawler.py  msg_parser.py  setu.py  usage.py
(+13 files in other folders)
